data/derived/comb/progs/unify/prog2788.ml.out
Characters 84-85:
  List.fold_left f base (List.rev fs);;
                 ^
Error: This expression has type ('a -> 'a -> 'b) -> 'a -> 'a -> 'b
       but an expression was expected of type
         ('a -> 'a -> 'b) -> 'a -> 'a -> 'a -> 'b
       The type variable 'b occurs inside 'a -> 'b
